Add 404 not found page

--- a/client/src/css/Home.css
+++ b/client/src/css/Home.css
@@ -50,3 +50,7 @@
   opacity: 1;
   animation: pulseGlow 3s ease-in-out 1s infinite;
 }
+
+.glow-red::after {
+  background: rgba(220, 38, 38, 0.35);
+}
