Create MailViewer component to view emails.

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -65,13 +65,13 @@
 }
 
 /* -- Components -- */
-.toast, .dialog {
+.toast, .dialog, .mail {
   opacity: 0;
   transition: opacity 0.3s;
   pointer-events: none;
 }
 
-.toast.visible, .dialog.visible {
+.toast.visible, .dialog.visible, .mail.visible {
   opacity: 1;
   pointer-events: auto;
 }
